file updating locally

--- a/index.html
+++ b/index.html
@@ -15,8 +15,19 @@
             </p>
     </header>
     <main>
+        <section>
         <h2>Sunday</h2>
-            <p>We had to cram the prework in before class.</p>
+            <p class="first-text">We had to cram the prework in before class.</p>
+                <pre class="second-text"><code> 
+                    h1 {
+                        text-align: center;
+                        margin: auto;
+                        border: 3px solid red;
+                        border-width: 10px 5px;
+                        font-size: 100px;
+                        }
+                </code> </pre>
+        </section>
         <h2>Monday</h2>
             <p>At the start of the class, we learned how to clone down from gitlab and create a repo.
             
@@ -26,17 +37,17 @@
                 Learned how to write html.
             </p>
         <h2>Wednesday</h2>
-        <p>
-                Started getting to CSS.
-        </p>
+            <p>
+                Started getting to know CSS.
+            </p>
         <h2>Thursday</h2>
-        <p>
+            <p>
             Turned in our first challenge.
-        </p>
+            </p>
         <h2>Friday</h2>
-        <p>
+            <p>
             Did our first mini project with a partner.
-        </p>
+            </p>
     </main>
     </body>
 </html>
